[package]
name = "rust-task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"
] }

eframe = "0.24.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }